--- a/figures/figures.org
+++ b/figures/figures.org
@@ -12,7 +12,7 @@
 * [[./shear_asof_drag]]
 Pas de script python pour le moment
 Je ne comprends plus ce que sont 'inverse events'
-* timeseries_extrms_AVG
+* [[./timeseries_extrms_AVG]]
 * [[./illustr_AMS]]
 * [[./AMS_OU]]
 * [[./AMS_drag_resampling]]
