Finished figure timeseries_extrms_AVG and added it to the paper

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -471,6 +471,13 @@ Setting $a=5.2\sigma _T$ leads to $84$ independent events, with $\sigma_T$ the s
 Figure~\ref{fig:extreme_avg} displays the timeseries $\{f_d(t^{\star})\}_{t^{\star} \leq t \leq t^{\star}+T}$ for four of the sampled extreme fluctuations sampled in the control timeseries for $F_T$.
 It illustrates that the phenomenology of the extreme fluctuations of the time-averaged drag can neither be reduced to case (1) nor case (2). 
 Indeed, both cases are featured in figure~\ref{fig:extreme_avg}, along with intermediate cases where the very large value of the drag results from both a very large fluctuation and a large number of typical, however all positive, fluctuations of the instantaneous drag $f_d$.
+\begin{figure}
+  \centering
+  \includegraphics[width=\linewidth]{timeseries_extrms_AVG/timeseries_extrms_AVG}
+  \caption{Instantaneous drag timeseries corresponding to the highest fluctuations of the time-averaged drag $F_T$ in the control timeseries. The averaging window is $T=10\tau_c$.
+  Here $f_d$ denotes the zero-mean, unit variance instantaneous drag. The time-average is normalized by the standard deviation for the time-averaged drag $\sigma_T$.}
+  \label{fig:extreme_avg}
+\end{figure}
 
 This marginal phenomenology can be connected to the exponential shape of the tail of the \ac{pdf} describing extreme positive drag fluctuations~\cite{papier_JSTAT}.
 An estimate of this \ac{pdf} is displayed in figure~\ref{fig:pdf_drag}.
