Takes the least-square fit out of PDF_AVG

--- a/draft_p2.tex
+++ b/draft_p2.tex
@@ -784,9 +784,9 @@ In this context, the \ac{gktl} algorithm is particularly suited to sample trajec
      & $\sigma$ & $2\sigma$ & $3\sigma$ & $4\sigma$ & $5\sigma$ \\
     \hline
     $k=0.02$ & 1594 & 799 & 155 & 22 & 0  \\ 
-    $k=0.025$ 1019 & 834 & 521 & 198 & 27  \\ 
+    $k=0.025$ & 1019 & 834 & 521 & 198 & 27  \\ 
     $k=0.03$ & 539 & 510 & 391 & 205 & 36  \\ 
-    $\mathcal{N}_{direct}$ & 2601.258& 374.862& 24.268& 0.958& 0.000\\ 
+    $\mathcal{N}_{direct}$ & 2599.408 & 372.738 & 22.117 & 0.519 & 0.005 
   \end{tabular}
   \caption{Number of fluctuations $F_{T_a} \geq a$ with a=$\sigma,2\sigma...$ in the biased ensemble, for the three experiments $k=0.02,0.025,0.03$.
     Within the biased ensemble, trajectories are counted as one if they overlap over more than $50\%$ of their duration.
